Stop the richtext help wrapping

--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -1678,6 +1678,7 @@ a.button.submit {
     margin-left: 15px;
     background-color: #f8f8ff;
     padding: 10px;
+    width: 300px;
     max-width: 450px;
 
     ul {
